tests/baselines/reference/stringIndexerAndConstructor.errors.txt
==== tests/cases/compiler/stringIndexerAndConstructor.ts (2 errors) ====
    class C {
        [s: string]: number;
        constructor() { }
        static v() { }
    }
    
    interface I {
        [s: string]: number;
        (): boolean;
        new (): boolean;
        "": string;
        ~~~~~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'number'.
        d: string;
        ~~~~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'number'.
    }